Fix: Add terser dependency and optimize build configuration
- Add terser@^5.36.0 to devDependencies to fix Render build failure
- Optimize Vite configuration with better chunking strategy
- Configure terser options to remove console logs in production
- Add production environment variables for debug/logging control
- Update Render deployment config with proper environment settings

--- a/example.env
+++ b/example.env
@@ -55,8 +55,14 @@ VITE_GROK_API_KEY=your-grok-api-key-here
 # Demo Mode (shows sample data when API keys aren't configured)
 VITE_AI_DEMO_MODE=false
 
-# Debug Mode (enables detailed logging)
-VITE_AI_DEBUG=true
+# Debug Mode (enables detailed logging - should be false in production)
+VITE_AI_DEBUG=false
+
+# Console logging (should be false in production)
+VITE_CONSOLE_LOGGING=false
+
+# Production mode (should be true for production builds)
+VITE_PRODUCTION_MODE=true
 
 # =============================================================================
 # QUICK START INSTRUCTIONS
