--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "postcss": "^8.5.6",
     "serve": "^14.2.4",
     "tailwindcss": "^3.4.17",
+    "terser": "^5.36.0",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
     "vite": "^6.3.5"
